# knowledge-wiki

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  mermaid-test.md  package-lock.json  package.json  pyproject.toml
.claude/: scheduled_tasks.json  wecom-webhook.py
.obsidian/: app.json  community-plugins.json  graph.json
agent/skills/: SKILL.md
deploy/: .env.example  README.md  alsa-loopback.service  setup.sh  wecom-webhook.service  wiki-mcp.service  wiki-scheduler.service
raw/AI平台/: DeepSeek API 定价.md
raw/AI应用/: AI 日报生成器（项目规划）.md
raw/Agent/: Agent核心技术概念与范式演变.md
raw/MCP/: vision-mcp-design.md
raw/收件箱/: url-20260522-223212.md  url-20260522-224443.md  wecom-text-20260521-000859.md  wecom-text-20260521-000909.md  wecom-text-20260521-001243.md  wecom-text-20260521-001850.md  wecom-text-20260521-001900.md  wecom-text-20260521-002522.md  wecom-text-20260521-003729.md  wecom-text-20260521-201859.md  wecom-text-20260521-201933.md  wecom-text-20260521-214552.md  wecom-text-20260522-090003.md  wecom-text-20260525-105218.md  wecom-text-20260526-111918.md  wecom-text-20260607-155934.md  wecom-url-20260522-230309.md  wecom-url-20260522-230427.md  wecom-url-20260522-232127.md  wecom-url-20260525-101116.md  wecom-url-20260526-111931.md  wecom-url-20260530-200414.md  wecom-url-20260607-220642.md  wecom-url-20260608-162125.md  wecom-url-20260609-084218.md  wecom-url-20260609-084437.md  wecom-url-20260609-084918.md  wecom-url-20260609-160614.md  wecom-url-20260610-105043.md
raw/知识工程/: Agent Skill 规范、构建与设计模式.md  Agent 知识管理与自进化——从LLM Wiki到GBrain.md
skills/auto-ingest/: SKILL.md
skills/bookmark-save/: skill.json
skills/daily-brief/: SKILL.md  impl.py
skills/habit-track/: SKILL.md  impl.py  skill.json
skills/ingest-article/: SKILL.md  impl.py  skill.json
skills/lint-wiki/: impl.py
skills/note-quick/: impl.py
skills/query-knowledge/: impl.py  skill.json
skills/remind-set/: impl.py  skill.json
skills/save-note/: SKILL.md  skill.json
skills/schedule-view/: SKILL.md  skill.json
skills/search-wiki/: SKILL.md  impl.py
skills/speak-text/: SKILL.md  impl.py  skill.json
skills/todo-manage/: impl.py  skill.json
src/knowledge_wiki/: __main__.py  config.py
static/: index.html
static/assets/: index-BwZe9ek2.css
templates/: comparison.md  concept.md  entity.md  source.md  synthesis.md  topic.md
tests/: __init__.py  conftest.py
tests/assistant/: test_db.py  test_models.py
tests/eval/: test_scorer.py
tests/evolve/: test_gap_detector.py
tests/llm/: __init__.py  test_base.py
tests/mcp/: __init__.py
tests/memory/: __init__.py  test_db.py  test_models.py  test_writer_reader.py
tests/retrieval/: test_bm25.py  test_catalog.py  test_tokenizer.py
tests/skill/: __init__.py  test_engine.py  test_registry.py
tests/webhook/: __init__.py  test_crypto.py  test_process.py
tests/wiki/: __init__.py  test_frontmatter.py  test_search.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
wiki/: USER.md  Wiki 目录.md  操作日志.md  知识库概览.md
wiki/.data/: memory.db
wiki/AI平台/: DeepSeek.md  Ollama.md  Qwen3-VL.md
wiki/AI应用/: AI 日报生成器.md
wiki/MCP/: MCP Vision Server 方案.md
wiki/基础设施/: DevMechin（AI 主机）.md  RGB 灯带控制.md  USB 音响控制.md
wiki/日报/: 2026-05-22.md  2026-05-23.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-05-30.md  2026-05-31.md  2026-06-06.md  2026-06-07.md
wiki/概念/: -audit- 审计通道.md  AI Workflow.md  Agent Skill.md  Agent Skills体系.md  Agentic Workflow.md  CLI原生化.md  Claude Code 长期记忆系统.md  EvoSkill.md  Harness Engineering.md  Harness.md  IANA保留域名.md  MCP（Model Context Protocol）.md  OPC（一人公司）.md  Prompt 回灌.md  RAG(检索增强生成).md  ReAct架构.md  SSE流式推送.md  SkillOpt.md  Skill自进化.md  Trace2Skill.md  Verify Agent.md  claude-agent-sdk.md  上下文工程.md  上下文隔离.md  保留域名.md  元评估（Meta Evaluation）.md  前沿集合（Frontier）.md  学习率约束（Bounded Update）.md  层级漂移.md  沙箱多实例隔离.md  渐进式披露.md  渐进式披露（Progressive Disclosure）.md  用户文件版本化存储.md  知识图谱.md  知识工程（Knowledge Engineering）.md  示例域.md  示例域名.md  离线主路径 + 实时兜底.md  自进化Agent.md  角色适配矩阵.md  (+2 more)
wiki/知识工程/: GBrain.md  LLM Wiki 模式.md  Obsidian-Wiki.md  Skill 设计模式（Google 5种）.md  Skill-Creator.md
wiki/综合分析/: 2026-05-23 Phase 2 实现详细流程图.md  AI 助手全面升级执行方案.md  AI 自进化知识系统 — 建设路线图.md  AI 自进化知识系统 — 总体路线图.md  DeepSeek API 驱动 ingest — 架构与实现.md  Wiki 服务化部署方案.md  next-phase-plan.md  个人AI助手扩展设计方案.md  企业微信Bot—MCP检索与模型交互链路.md  检索引擎升级实施方案.md  知识库系统全链路架构.md  知识库系统工程化架构.md
wiki/资料摘要/: 资料摘要：AI 日报生成器项目规划.md  资料摘要：AI自主增长系统.md  资料摘要：Agent Skill 规范构建与设计模式.md  资料摘要：Agent 知识管理与自进化.md  资料摘要：BYD深度研究.md  (+14 more)
(+141 files in other folders)
