[project]
name = "knowledge-wiki"
version = "1.0.0"
description = "AI 自进化知识库系统 — MCP Server + 企业微信 Bot + Agent 技能引擎"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "pycryptodome>=3.20",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[project.scripts]
kw-server = "knowledge_wiki.__main__:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
